--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  color: black;
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -41,8 +45,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #F4F5FA;
-    
+  background-color: #f4f5fa;
+  overflow: hidden;
 }
 
 h1 {
